<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.khem.appspring</groupId>
	<artifactId>springphoneshop</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>springphoneshop</name>
	<description>Demo project Phoneshop Spring Boot </description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>

 <dependency>
   <groupId>org.springframework.boot</groupId>
   <artifactId>spring-boot-starter-data-jpa</artifactId>
</dependency>
  <dependency>

   <groupId>org.springframework.boot</groupId>

   <artifactId>spring-boot-starter-data-jpa</artifactId>

  </dependency>

  <dependency>

   <groupId>org.springframework.boot</groupId>

   <artifactId>spring-boot-starter-validation</artifactId>

  </dependency>

  <dependency>

   <groupId>org.springframework.boot</groupId>

   <artifactId>spring-boot-starter-web</artifactId>

  </dependency>




  <!-- <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 

   <scope>runtime</scope> </dependency> -->

  <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->

  <dependency>

   <groupId>org.postgresql</groupId>

   <artifactId>postgresql</artifactId>

  </dependency>




  <dependency>

   <groupId>org.projectlombok</groupId>

   <artifactId>lombok</artifactId>

   <optional>true</optional>

  </dependency>

  <dependency>

   <groupId>org.mapstruct</groupId>

   <artifactId>mapstruct</artifactId>

   <version>1.5.3.Final</version>

  </dependency>

  <dependency>

   <groupId>org.springframework.boot</groupId>

   <artifactId>spring-boot-starter-test</artifactId>

   <scope>test</scope>

  </dependency>

  <dependency>

   <groupId>org.mapstruct</groupId>

   <artifactId>mapstruct-processor</artifactId>

   <version>1.5.3.Final</version>

  </dependency>

 </dependencies>




 <build>

  <plugins>

   <plugin>

    <groupId>org.springframework.boot</groupId>

    <artifactId>spring-boot-maven-plugin</artifactId>

    <configuration>

     <excludes>

      <exclude>

       <groupId>org.projectlombok</groupId>

       <artifactId>lombok</artifactId>

      </exclude>

     </excludes>

    </configuration>

   </plugin>

    

 

    

  </plugins>

 </build>

</project>
